# pluto-deprecated

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  conanfile.txt
assets/built-in/fonts/: roboto-regular.ttf.pluto
assets/built-in/materials/: pluto-logo.mat  pluto-logo.mat.pluto
assets/built-in/meshes/: quad.obj.pluto
assets/built-in/shaders/: color.glsl  pluto-null.glsl  pluto-null.glsl.pluto  text-default.glsl  text-default.glsl.pluto  unlit-color.glsl.pluto  unlit-default.glsl  unlit-default.glsl.pluto  unlit-texture.glsl  unlit-texture.glsl.pluto  unlit-transparent.glsl  unlit-transparent.glsl.pluto  unlit.glsl
assets/built-in/text/: hello_world.txt.pluto
assets/built-in/textures/: pluto-logo.png.pluto  rgb.png.pluto
docs/: shaders.md
examples/flappy_bird/: CMakeLists.txt
examples/flappy_bird/assets/flappy_bird/materials/: background-day.mat  background-day.mat.pluto  flappy.mat  flappy.mat.pluto  gameover.mat  gameover.mat.pluto  ground.mat  ground.mat.pluto  message.mat  message.mat.pluto  pipe.mat  pipe.mat.pluto
examples/flappy_bird/assets/flappy_bird/textures/: background-day.png.pluto  gameover.png.pluto  ground.png.pluto  message.png.pluto  pipe-green.png.pluto  yellowbird-downflap.png.pluto  yellowbird-midflap.png.pluto  yellowbird-upflap.png.pluto
examples/flappy_bird/src/: flappy_bird.cpp
examples/flappy_bird/src/components/: flappy_animation.cpp  flappy_animation.h  flappy_controller.cpp  flappy_controller.h  fps_counter.cpp  fps_counter.h  game_over.cpp  game_over.h  ground.cpp  ground.h  intro.cpp  intro.h  pipe.cpp  pipe.h  point_counter.cpp  point_counter.h
examples/flappy_bird/src/events/: on_game_over_event.h  on_game_start_event.h
examples/flappy_bird/src/managers/: game_manager.cpp  game_manager.h
examples/sandbox/: CMakeLists.txt  sandbox.cpp
examples/sandbox/components/: rotator.cpp  rotator.h
include/pluto/: base_factory.h  di_container.h  exception.h  guid.h  pluto.h  root.h  singleton.h  stack_trace.h  stop_watch.h
include/pluto/asset/: asset.h  asset_installer.h  asset_manager.h  material_asset.h  mesh.h  mesh_asset.h  package_manifest_asset.h  shader_asset.h  text_asset.h
include/pluto/config/: config_installer.h  config_manager.h
include/pluto/di/: di_container.h  singleton.h
include/pluto/event/: event_manager.h
include/pluto/file/: file_installer.h  file_manager.h  file_reader.h  file_writer.h
include/pluto/input/: input_manager.h  key_code.h
include/pluto/log/: log_installer.h  log_manager.h
include/pluto/math/: matrix4.h  quaternion.h  vector2.h  (+7 more)
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/components/: rotator.cpp  rotator.h
shaders/: color.glsl  pink.glsl
src/: CMakeLists.txt  di_container.cpp  exception.cpp  guid.cpp  pluto.cpp  regex.cpp  root.cpp  stack_trace.cpp
src/asset/: asset.cpp  asset_installer.cpp  asset_manager.cpp  mesh.cpp  mesh_asset.cpp  package_manifest_asset.cpp  shader_asset.cpp  text_asset.cpp
src/config/: config_installer.cpp  config_manager.cpp
src/di/: base_factory.cpp  di_container.cpp  singleton.cpp
src/event/: event_installer.cpp  event_manager.cpp
src/file/: file_installer.cpp  file_manager.cpp  file_reader.cpp  file_writer.cpp
src/input/: input_installer.cpp  input_manager.cpp
src/log/: log_installer.cpp  log_manager.cpp
src/math/: Vector3I.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector2f.cpp  vector3.cpp  vector3f.cpp  vector3int.cpp  vector4.cpp  vector4f.cpp  vector4i.cpp
src/scene/: game_object.cpp  scene.cpp  scene_manager.cpp  transform.cpp
src/simulation/: simulation_installer.cpp  simulation_manager.cpp
src/window/: window_manager.cpp
tools/pluto_asset_manager/: CMakeLists.txt  asset_dumper.cpp  asset_dumper.h  base_compiler.cpp  base_compiler.h  base_menu.cpp  base_menu.h  main.cpp  menu_options.cpp  menu_options.h  text_asset_builder.cpp  text_asset_builder.h  text_asset_manager.cpp  text_asset_menu.cpp  text_asset_menu.h
tools/pluto_asset_manager/compilers/: font_compiler.cpp  font_compiler.h  material_compiler.cpp  material_compiler.h  mesh_compiler.cpp  mesh_compiler.h  package_compiler.cpp  package_compiler.h  shader_compiler.cpp  shader_compiler.h  text_compiler.cpp  text_compiler.h  texture_compiler.cpp  texture_compiler.h
tools/pluto_asset_manager/dummy/: dummy_shader_program.cpp  dummy_shader_program.h  dummy_texture_buffer.cpp  dummy_texture_buffer.h
tools/pluto_asset_manager/font/: font_asset_compiler.cpp  font_asset_compiler.h
tools/pluto_asset_manager/material/: material_asset_manager.cpp  material_asset_manager.h  material_asset_menu.cpp  material_asset_menu.h
tools/pluto_asset_manager/mesh/: mesh_asset_manager.cpp  mesh_asset_manager.h  mesh_asset_menu.cpp  mesh_asset_menu.h
tools/pluto_asset_manager/package/: package_manager.cpp  package_manager.h  package_menu.cpp  package_menu.h
tools/pluto_asset_manager/shader/: dummy_shader_program.cpp  dummy_shader_program.h  shader_asset_manager.cpp  shader_asset_manager.h  shader_asset_menu.cpp  shader_asset_menu.h
tools/pluto_asset_manager/text/: text_asset_manager.cpp  text_asset_manager.h  text_asset_menu.cpp  text_asset_menu.h
tools/pluto_asset_manager/texture/: dummy_texture_buffer.cpp  dummy_texture_buffer.h  texture_asset_manager.cpp  texture_asset_manager.h  texture_asset_menu.cpp  texture_asset_menu.h
(+247 files in other folders)
